--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gym-notes",
   "version": "0.1.0",
+  "homepage": "https://your-username.github.io/gym-notes",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -15,9 +16,9 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "dayjs": "^1.11.13",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
@@ -38,7 +39,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -59,6 +62,7 @@
     ]
   },
   "devDependencies": {
-    "ajv": "^7.2.4"
+    "ajv": "^7.2.4",
+    "gh-pages": "^6.3.0"
   }
 }
