--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://your-username.github.io/gym-notes",
   "private": true,
   "dependencies": {
+    "@base-ui-components/react": "^1.0.0-alpha.6",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.3",
